# tai-channel-telegram

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  tai-plugin.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/tai42_channel_telegram/: __init__.py  channel.py  client.py  correlation.py  inbound.py  register.py  settings.py  tai-plugin.yml
src/tai_channel_telegram/: __init__.py  channel.py  client.py  correlation.py  inbound.py  register.py  settings.py
tests/: conftest.py  test_channel.py  test_correlation.py  test_import_graph.py  test_inbound.py  test_integration_live.py  test_plugin_spec.py  test_register.py  test_settings.py
