[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tai-channel-telegram"
version = "0.1.0"
description = "Telegram channel plugin for the TAI ecosystem — delivers ask_user questions to a Telegram chat and bridges the typed reply back to the interactions callback door."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "tai42", email = "oss@tai42.ai" },
]
keywords = ["mcp", "channel", "telegram", "hitl", "interactions", "tai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # The pure interface contract — Channel, ChannelDelivery, ChannelDeliveryError,
    # and the tai_app handle the plugin registers through.
    "tai-contract>=0.1,<0.2",
    # HttpxClient + RedisClient (redis extra) + TaiBaseSettings + the settings
    # cache registry + RedisConnectionSettings.
    "tai-kit[redis]>=0.1,<0.2",
    # The whole transport: Bot API calls, the callback forward, and the error
    # types the channel classifies. No Telegram SDK — the Bot API is flat
    # JSON-over-HTTPS and there is no official Python SDK.
    "httpx>=0.28",
    # Request/Response types of the inbound route handler (imported directly).
    "starlette>=0.40",
    # SecretStr for the bot token / webhook secret and the settings base/config.
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
]

[project.urls]
Homepage = "https://tai42.ai"
Repository = "https://github.com/tai42ai/tai-channel-telegram"
Issues = "https://github.com/tai42ai/tai-channel-telegram/issues"
Changelog = "https://github.com/tai42ai/tai-channel-telegram/blob/main/CHANGELOG.md"

[dependency-groups]
# PEP 735 dev group — installed by default on `uv sync`, so the gate
# `uv sync && uv run pytest && uv run ruff check . && uv run pyright` runs clean.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.389",
    # The plugin-spec test parses tai-plugin.yml.
    "pyyaml>=6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tai_channel_telegram*"]

[tool.setuptools.package-data]
tai_channel_telegram = ["py.typed", "tai-plugin.yml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
xfail_strict = true
# Turn warnings into errors so a real defect that only surfaces as a warning
# (e.g. a missing await -> "coroutine was never awaited") fails the suite loudly
# instead of passing green.
filterwarnings = ["error"]
markers = [
    "integration: live tests that hit the real Telegram Bot API (skip cleanly without CHANNEL_TELEGRAM_* credentials)",
]

[tool.coverage.run]
source = ["tai_channel_telegram"]

[tool.coverage.report]
fail_under = 97

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]

# Dev-only: resolve the sibling contract/kit checkouts while all repos are
# in-progress. The published version floors in [project].dependencies are what
# the shipped wheel declares; these source overrides are not wheel metadata.
[tool.uv.sources]
tai-contract = { path = "../tai-contract", editable = true }
tai-kit = { path = "../tai-kit", editable = true }

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PIE", "PT", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tai_skeleton".msg = "A channel plugin sits below the skeleton: it never imports tai-skeleton. It reaches the interactions store only through the public callback door."

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
